--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,16 @@
 /* Raleway 700*/
 /* Roboto 900 700 400 500 */
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
@@ -31,6 +41,8 @@ body {
 
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .topic {
@@ -39,9 +51,26 @@ body {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
 
 /* Header elements */
+
+.container {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1230px;
+  padding: 15px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.logo-nav-box {
+  display: flex;
+  align-items: center;
+}
 
 /* Header LOGO */
 .header-logo {
@@ -52,6 +81,7 @@ body {
   font-family: raleway, sans-serif;
   letter-spacing: 0.03em;
   text-decoration: none;
+  margin-right: 93px;
 }
 
 .header-logo:hover,
@@ -64,15 +94,28 @@ body {
 }
 
 /* Site nav */
+.site-nav {
+  display: flex;
+}
+
+.site-nav-item:not(:last-child) {
+  margin-right: 50px;
+}
 
 .site-nav-link {
   color: var(--title-text-color);
   text-decoration: none;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .site-nav-link-current {
   color: var(--site-current-page-color);
   text-decoration: none;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .site-nav-link:hover,
@@ -84,6 +127,15 @@ body {
   color: var(--focus-hover-color);
 }
 
+.header-contacts {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.header-contacts-item:not(:last-child) {
+  margin-right: 50px;
+}
 .site-nav,
 .header-contacts {
   font-weight: 500;
@@ -104,18 +156,39 @@ body {
 }
 
 /* Hero Section */
+.hero {
+  background-color: var(--footer-bgc-color);
+  text-align: center;
+}
+
+.hero-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1230px;
+  padding: 15px;
+  padding-top: 0;
+  padding-bottom: 0;
+  text-align: center;
+  justify-content: center;
+}
+
 .hero-title {
+  display: inline-block;
+  margin-top: 0;
+  margin-bottom: 30px;
   color: #fff;
+  max-width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 
-.hero {
-  background-color: var(--footer-bgc-color);
+.button {
+  display: flex;
+  margin: auto;
+  border: 0px solid transparent;
 }
 
 .button.primary {
@@ -127,9 +200,11 @@ body {
   line-height: 1.87;
   display: flex;
   align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   cursor: pointer;
+  border-radius: 4px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
 
 .button.primary:hover,
@@ -139,6 +214,33 @@ body {
 }
 
 /* Features Section */
+
+.features-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1230px;
+  padding: 15px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.features-main-title {
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.features-flex-box {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
+
+.features-item {
+  width: 270px;
+}
+
 .features-title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -146,6 +248,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .features-text {
@@ -155,16 +258,71 @@ body {
 }
 
 /* What We Do Section */
+
+.task-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1230px;
+  padding: 15px;
+  padding-top: 0;
+  padding-bottom: 0;
+  text-align: center;
+}
+
 .tasks-title {
   color: var(--title-text-color);
+  margin-top: 0;
+  margin-bottom: 50;
+}
+
+.tasks-flex-box {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 94px;
 }
 
 /* Team */
+
+.team {
+  background-color: var(--secondari-bgc-color);
+}
+
+.team-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1230px;
+  padding: 15px;
+  padding-top: 0;
+  padding-bottom: 0;
+  text-align: center;
+}
+
+.team-flex-box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.team-member {
+  background-color: var(--main-bgc-color);
+  width: 270px;
+  margin-bottom: 94px;
+}
+
 .team-title,
 .name {
   color: var(--title-text-color);
+  margin-top: 0;
+  margin-bottom: 50;
 }
+
+.team-title {
+  display: inline-block;
+  margin-top: 94px;
+}
+
 .name {
+  display: block;
+  margin-top: 30px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -173,22 +331,43 @@ body {
 }
 
 .work-title {
+  display: block;
+  margin-bottom: 30px;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
-.team {
-  background-color: var(--secondari-bgc-color);
-}
-
-.team-member {
-  background-color: var(--main-bgc-color);
-}
-
 /* Portfolio Pages */
 /* Filters Button */
+
+.filters-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1230px;
+  padding: 15px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.secondary-button {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+  margin-top: 94px;
+}
+
+.secondary-button-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.filters-title {
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+}
+
 .button.secondary {
   background-color: var(--button-bgc-secondary-color);
   color: var(--button-secondary-text-color);
@@ -199,6 +378,9 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
+  border-radius: 4px;
+  padding-left: 22px;
+  padding-right: 22px;
 }
 
 .button.secondary:hover,
@@ -213,6 +395,31 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  display: block;
+  margin-top: 20px;
+  margin-left: 24px;
+
+  border: 10px solis var(--primary-text-color);
+}
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 94px;
+}
+
+.portfolio-link-item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  width: 370px;
+}
+
+.portfolio-link-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.portfolio-link-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
 }
 
 .portfolio-link {
@@ -230,10 +437,26 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
+  display: block;
+  margin-bottom: 20px;
+  margin-left: 24px;
 }
 
 /* Footer */
+.footer-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1230px;
+  height: 252px;
+  padding: 15px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .footer-logo {
+  display: inline-block;
+  margin-top: 60px;
+  margin-bottom: 20px;
   color: #fff;
   font-family: "Raleway";
   font-weight: 700;
@@ -253,6 +476,8 @@ body {
 }
 
 .map {
+  display: inline-block;
+  margin-bottom: 9px;
   color: var(--button-text-primary-color);
   font-size: 14px;
   line-height: 1.71;
@@ -267,6 +492,8 @@ body {
 }
 
 .contact {
+  display: inline-block;
+  margin-bottom: 9px;
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.71;
